// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

// This file contains proto definitions related to events.  Events are emitted
// by smart contract execution.  These could include events such as received
// transactions, sent transactions, etc.

syntax = "proto3";

package types;

import "access_path.proto";
import "proof.proto";

// An event emitted from a smart contract
message Event {
    bytes key = 1;
    uint64 sequence_number = 2;
    bytes event_data = 3;
    bytes type_tag = 4;
}

// An event along with the proof for the event
message EventWithProof {
  uint64 transaction_version = 1;
  uint64 event_index = 2;
  Event event = 3;
  EventProof proof = 4;
}

// A list of events.
message EventsList {
  repeated Event events = 1;
}

// A list of EventList's, each representing all events for a transaction.
message EventsForVersions {
    repeated EventsList events_for_version = 1;
}
